Fix highest price retrieval in InventoryPage and update CI branches for performance tests